--- a/src/main/resources/assets/sbmcharcoalblock/lang/fr_fr.lang
+++ b/src/main/resources/assets/sbmcharcoalblock/lang/fr_fr.lang
@@ -1,3 +1,5 @@
-##Charcoal Block FR France Localizations
+{
+    "_comment": "#Charcoal Block FR France Localizations",
 
-tile.sbmcharcoalblock:charcoal_block.name=Bloc de charbon de bois
+    "block.sbmcharcoalblock.charcoal_block": "Bloc de charbon de bois"
+}
