--- a/src/main/resources/assets/sbmcharcoalblock/lang/en_us.lang
+++ b/src/main/resources/assets/sbmcharcoalblock/lang/en_us.lang
@@ -1,3 +1,3 @@
-##Charcoal Block US English Localizations
-
-tile.sbmcharcoalblock:charcoal_block.name=Charcoal Block
+{
+    "block.sbmcharcoalblock.charcoal_block": "Charcoal Block"
+}
